--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "eslint-plugin-cypress": "^2.12.1",
+    "express": "^4.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^10.11.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.2",
+    "less": "^4.1.2",
+    "parcel-bundler": "^1.12.4"
   }
 }
